--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,23 @@
   background-color: transparent;
   border: 2px solid rgb(93, 93, 93);
 }
+
+
+.card{
+  width: 300px;
+  height: 300px;
+  padding: 22px;
+  background-color: rgb(185, 185, 185);
+  margin: 10px;
+}
+
+.cardImage{
+  width: 100%;
+}
+
+.flexDispay{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
