--- a/src/index.css
+++ b/src/index.css
@@ -1,141 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-.myHeader {
-  width: 100%;
-  height: 50px;
-  background-color: red;
-  display: flex;
-  color: white;
-  justify-content: space-between;
-}
-
-.mainRightCont {
-  width: 100%;
-}
-
-.myLogo {
-  width: 200px;
-  display: flex;
-  justify-content: center; /* if you want to center the things horizontal way you have to add this */
-  align-items: center; /* if you want to center the things vertcal way you have to add this */
-  height: 100%;
-}
-
-.rightAction {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 20px;
-  gap: 22px;
-}
-
-.myHero {
-  background: rgb(97, 97, 148);
-  width: 100%;
-  color: white;
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 22px;
-}
-
-.myPara {
-  width: 70%;
-  text-align: center;
-  font-size: 25px;
-}
-
-.myButton {
-  width: 200px;
-  height: 50px;
-  background-color: rgb(93, 93, 93);
-  border: none;
-  color: white;
-  cursor: pointer;
-}
-
-.myButton:hover {
-  background-color: transparent;
-  border: 2px solid rgb(93, 93, 93);
-}
-
-.card {
-  width: 300px;
-  height: 300px;
-  padding: 22px;
-  background-color: rgb(185, 185, 185);
-  margin: 10px;
-}
-
-.cardImage {
-  width: 100%;
-}
-
-.flexDisplay {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.cardDiv {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.servicesdiv {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}
-.incDiv {
-  width: 300px;
-  height: 500px;
-
-  display: flex;
-  flex-direction: column;
-  background-color: gray;
-  align-items: center;
-}
-
-.incDiv > img {
-  width: 100%;
-  height: 70%;
-}
-
-.title {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  margin-top: 12px;
-  margin-right: 12px;
-  color: wheat;
-}
-.numberSpan {
-  font-size: 44px;
-  font-weight: bold;
-  color: wheat;
-}
-
-.buttonDiv {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 22px;
-}
-
-.buttonDiv > button {
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
